# Foundation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/: CMakeLists.txt  imgui.cmake
Engine/include/glad/: CMakeLists.txt
Engine/include/glad/include/glad/: glad.h
Engine/include/glad/src/: glad.c
Engine/src/: Foundation.h  engine.cpp  engine.h  fndpch.h
Engine/src/Foundation/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.h  fndpch.cpp  fndpch.h
Engine/src/Foundation/Core/: AbstractManager.h  Application.cpp  Application.h  EntryPoint.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Log.cpp  Log.h  LogManager.cpp  LogManager.h  Window.cpp  Window.h
Engine/src/Foundation/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvents.h
Engine/src/Foundation/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Foundation/Input/: InputManager.cpp  InputManager.h  KeyCodes.h  MouseCodes.h
Engine/src/Foundation/Rendering/: Buffer.cpp  Buffer.h  RenderingContext.cpp  RenderingContext.h  RenderingManager.cpp  RenderingManager.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Engine/src/Foundation/Utils/: EnumArray.cpp  EnumArray.h  FlagEnums.h  Singleton.h  flag_enums.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/src/engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  engine.cpp  engine.h
Engine/src/engine/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvents.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  main.cpp
